--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+data-analysis/.ipynb_checkpoints/
+data-analysis/Input_Records-rjopma1bz5n6bxxvxhq0.json
+data-analysis/formated.json
+.gitignore
